Corrections to EmployeeSearchService.java